--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "node": ">=12.7.x",
     "yarn": ">=1.19.x"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/runtime": "^7.7.2",
+    "@types/supertest": "^2.0.8",
+    "express": "^4.17.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
@@ -35,7 +42,8 @@
     "@babel/preset-typescript": "^7.7.2",
     "@mhirba/eslint-config-base": "^1.4.2",
     "@types/chai": "^4.2.4",
-    "@types/jest": "^24.0.20",
+    "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.23",
     "@types/node": "^12.11.7",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
