--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,6 @@
-## .gitignore generated with love for Mhirba
-
-##
-# NODE
-##
-
-# Modules dependencies
-node_modules/
-
-# Package manager stuff
-yarn-debug.log*
-yarn-error.log*
-
-package-lock.json
-yarn.lock
-
-# Environment
-.env
-
-# Logs
-*.log
-
-# Testing
-coverage/
-
-##
-# GENERATED
-##
-# by us
-.dist
-
-# by others
+.idea/
 .vscode/
-.DS_Store
+node_modules/
+build/
+tmp/
+temp/
