--- a/package.json
+++ b/package.json
@@ -1,62 +1,72 @@
 {
-  "name": "starter-efrei",
-  "version": "1.0.0",
-  "description": "Hello Efrei",
-  "author": "Majdi Toumi <majdi@mhirba.com> (http://mhirba.com)",
-  "license": "MIT",
-  "private": true,
-  "main": ".dist/main.js",
-  "types": "types.d.ts",
-  "scripts": {
-    "test:static": "yarn tsc",
-    "test:unit": "yarn jest --config=.jestrc.js --maxWorkers 2",
-    "test": "yarn test:static && yarn test:unit",
-    "lint": "yarn eslint src/*.ts* src/**/*.ts*",
-    "dev": "yarn nodemon",
-    "build": "yarn babel src/ --out-dir .dist/ --extensions \".ts\" --source-maps inline --quiet --copy-files",
-    "clean": "yarn rimraf .dist"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn prettier --write \"src/*.ts\" \"src/**/*.ts*\"",
-      "pre-push": "yarn lint && yarn test"
-    }
-  },
-  "engines": {
-    "node": ">=12.7.x",
-    "yarn": ">=1.19.x"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/runtime": "^7.7.2",
-    "@types/supertest": "^2.0.8",
-    "express": "^4.17.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-typescript": "^7.7.2",
-    "@mhirba/eslint-config-base": "^1.4.2",
-    "@types/chai": "^4.2.4",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.11.7",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
-    "babel-jest": "^24.9.0",
-    "chai": "^4.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-jest": "^22.20.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.16.4",
-    "prettier-eslint": "^9.0.0"
-  }
+   "name": "starter-efrei",
+   "version": "1.0.0",
+   "description": "Hello Efrei",
+   "author": "Majdi Toumi <majdi@mhirba.com> (http://mhirba.com)",
+   "license": "MIT",
+   "private": true,
+   "main": ".dist/index.js",
+   "types": "types.d.ts",
+   "scripts": {
+      "test:static": "yarn tsc",
+      "test:unit": "yarn jest --config=.jestrc.js --maxWorkers 2",
+      "test": "yarn test:static && yarn test:unit",
+      "lint": "yarn eslint src/*.ts* src/**/*.ts*",
+      "dev": "yarn nodemon",
+      "build": "yarn babel src/ --out-dir .dist/ --extensions \".ts\" --source-maps inline --quiet --copy-files",
+      "clean": "yarn rimraf .dist",
+      "start": "ts-node src/index.ts"
+   },
+   "husky": {
+      "hooks": {
+         "pre-commit": "yarn prettier --write \"src/*.ts\" \"src/**/*.ts*\"",
+         "pre-push": "yarn lint && yarn test"
+      }
+   },
+   "engines": {
+      "node": ">=12.7.x",
+      "yarn": ">=1.19.x"
+   },
+   "dependencies": {
+      "@babel/plugin-proposal-class-properties": "^7.7.0",
+      "@babel/plugin-proposal-decorators": "^7.7.0",
+      "@babel/plugin-transform-runtime": "^7.6.2",
+      "@babel/runtime": "^7.7.2",
+      "@types/supertest": "^2.0.8",
+      "body-parser": "^1.18.1",
+      "express": "^4.15.4",
+      "mysql": "^2.14.1",
+      "pg": "^7.12.1",
+      "reflect-metadata": "^0.1.10",
+      "supertest": "^4.0.2",
+      "ts-jest": "^24.1.0",
+      "typeorm": "0.2.20"
+   },
+   "devDependencies": {
+      "@babel/cli": "^7.6.4",
+      "@babel/core": "^7.6.4",
+      "@babel/node": "^7.6.3",
+      "@babel/preset-env": "^7.7.1",
+      "@babel/preset-typescript": "^7.7.2",
+      "@mhirba/eslint-config-base": "^1.4.2",
+      "@types/chai": "^4.2.4",
+      "@types/express": "^4.17.2",
+      "@types/jest": "^24.0.23",
+      "@types/node": "^8.0.29",
+      "@typescript-eslint/eslint-plugin": "^2.5.0",
+      "@typescript-eslint/parser": "^2.5.0",
+      "babel-jest": "^24.9.0",
+      "chai": "^4.2.0",
+      "eslint": "^6.5.1",
+      "eslint-config-prettier": "^6.4.0",
+      "eslint-plugin-jest": "^22.20.1",
+      "eslint-plugin-prettier": "^3.0.1",
+      "husky": "^3.0.9",
+      "jest": "^24.9.0",
+      "nodemon": "^1.18.9",
+      "prettier": "^1.16.4",
+      "prettier-eslint": "^9.0.0",
+      "ts-node": "3.3.0",
+      "typescript": "3.3.3333"
+   }
 }
