--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "lib": ["esnext", "dom"],
-    "allowJs": false,
-    "noEmit": true,
-    "strict": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "outDir": ".dist"
-  },
-  "include": ["src", "types.d.ts"],
-  "exclude": [
-    ".eslintrc.js",
-    ".jestrc.js",
-    "babel.config.js",
-    "prettier.config.js"
-  ]
+   "compilerOptions": {
+      "lib": [
+         "es5",
+         "es6"
+      ],
+      "target": "es5",
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "outDir": "./build",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "sourceMap": true
+   }
 }
