--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "@babel/runtime": "^7.7.2",
       "@types/supertest": "^2.0.8",
       "body-parser": "^1.18.1",
+      "class-validator": "^0.11.0",
       "express": "^4.15.4",
       "mysql": "^2.14.1",
       "pg": "^7.12.1",
